--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.6.2
+Date: 2021-08-31
+  Changes:
+    - Changed settings default value
+---------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: 2021-08-31
   Notes:
