--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.6.3
+Date: 2021-09-11
+  Changes:
+    - Changed localization
+---------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: 2021-08-31
   Changes:
