--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.7.0
+Date: 2021-10-22
+  Changes:
+    - Slightly optimized
+---------------------------------------------------------------------------------------------------
 Version: 0.6.3
 Date: 2021-09-11
   Changes:
