--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.7.1
+Date: 2021-10-23
+  Features:
+    - The interface can be updated manually by clicking the button now
+---------------------------------------------------------------------------------------------------
 Version: 0.7.0
 Date: 2021-10-22
   Changes:
