--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.1
+Date: 2021-12-20
+  Changes:
+    - Refactored slightly
+---------------------------------------------------------------------------------------------------
 Version: 0.8.0
 Date: 2021-12-20
   Changes:
