--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.2
+Date: 2021-12-20
+  Changes:
+    - Improved stability with other mods
+---------------------------------------------------------------------------------------------------
 Version: 0.8.1
 Date: 2021-12-20
   Changes:
