--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.3
+Date: 2021-12-21
+  Bugfixes:
+    - Fixed migration of data for <0.8.0
+---------------------------------------------------------------------------------------------------
 Version: 0.8.2
 Date: 2021-12-20
   Changes:
