--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.4
+Date: 2021-12-22
+  Changes:
+    - Changed event handler (slightly better performance)
+---------------------------------------------------------------------------------------------------
 Version: 0.8.3
 Date: 2021-12-21
   Bugfixes:
