--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.5
+Date: 2021-12-24
+  Changes:
+    - Refactored slightly
+---------------------------------------------------------------------------------------------------
 Version: 0.8.4
 Date: 2021-12-22
   Changes:
