--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.6
+Date: 2022-01-02
+  Locale:
+    - Fixed Russian locale
+---------------------------------------------------------------------------------------------------
 Version: 0.8.5
 Date: 2021-12-24
   Changes:
