--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.8.7
+Date: 2022-04-10
+  Changes:
+    - Refactored slightly
+    - Bettter performance for multiplayer games (there was a bug)
+---------------------------------------------------------------------------------------------------
 Version: 0.8.6
 Date: 2022-01-02
   Locale:
