--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.0
+Date: 2022-05-21
+  Features:
+    - You can hide player money now
+  Bugfixes:
+    - Fixed updating of gui in multiplayer
+---------------------------------------------------------------------------------------------------
 Version: 0.8.7
 Date: 2022-04-10
   Changes:
