--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.1
+Date: 2022-05-22
+  Features:
+    - Supports https://mods.factorio.com/mod/gvv
+  Changes:
+    - Refactored and optimized for multiplayer
+---------------------------------------------------------------------------------------------------
 Version: 0.9.0
 Date: 2022-05-21
   Features:
