--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.2
+Date: 2022-05-21
+  Changes:
+    - Optimized
+  Bugfixes:
+    - Fixed minimum and maximum value of settings
+---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 2022-05-22
   Features:
