--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.3
+Date: 2022-11-04
+  Bugfixes:
+    - It seems like some stuff from v0.9.1 caused desyncs in some cases, so I removed those instable changes
+---------------------------------------------------------------------------------------------------
 Version: 0.9.2
 Date: 2022-05-22
   Changes:
