--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.4
+Date: 2022-11-05
+  Bugfixes:
+    - Fixed event handling (caused desyncs)
+---------------------------------------------------------------------------------------------------
 Version: 0.9.2
 Date: 2022-05-22
   Changes:
