--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.9.5
+Date: 2023-09-02
+  Changes:
+    - Added a thumbnail
+  Locale:
+    - Added Ukrainian translation (thanks to @Met_en_Bouldry on crowdin)
+---------------------------------------------------------------------------------------------------
 Version: 0.9.4
 Date: 2022-11-05
   Bugfixes:
